fix FlipClock vertical-align

--- a/flipclock/compiled/flipclock_plus.css
+++ b/flipclock/compiled/flipclock_plus.css
@@ -9,7 +9,7 @@
 	   longer spans the width of it's parent and is able to be properly
 	   aligned by adding text-align : right to it's container */
 	display: inline-table;
-	vertical-align: sub;
+	vertical-align: text-top;
 	width: auto;
 	
 	/* Fix size issue in FlipClock */
